gke-google-managed-ssl/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - image: helloworld
          name: app
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            timeoutSeconds: 5
            initialDelaySeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            requests:
              memory: 10Mi
              cpu: 10m
            limits:
              memory: 128Mi
              cpu: 100m
