gke-google-managed-ssl/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - name: app-port
      protocol: TCP
      port: 80
      targetPort: 8080
